remove travesal ops